initialize css with cssremedy

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Shallwi – Love Your Brand | Graphic & Web Design</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <header>
@@ -18,7 +19,7 @@
             </nav>
         </header>
         <main>
-            <section>
+            <section class="hero">
                 <h2>Graphic & Web Design</h2>
                 <p>
                     Wow your customers with a fresh logo and a website makeover 
@@ -27,6 +28,6 @@
             </section>
         </main>
         <footer></footer>
-        <script src="./index.js"></script>
+        <!-- <script src="./index.js"></script> -->
     </body>
 </html>
