--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Shallwi – Love Your Brand | Graphic & Web Design</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <body>
         <header>
@@ -28,6 +28,5 @@
             </section>
         </main>
         <footer></footer>
-        <!-- <script src="./index.js"></script> -->
     </body>
 </html>
