implement initial hero and nav css

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <title>Shallwi – Love Your Brand | Graphic & Web Design</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="./css/index.css">
+        <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet"> 
     </head>
     <body>
         <header>
@@ -20,11 +21,13 @@
         </header>
         <main>
             <section class="hero">
-                <h2>Graphic & Web Design</h2>
-                <p>
-                    Wow your customers with a fresh logo and a website makeover 
-                    that’s easy to use and looks amazing.
-                </p>
+                <div class="hero__content">
+                    <h2>Graphic & Web Design</h2>
+                    <p>
+                        Wow your customers with a fresh logo and a website makeover 
+                        that’s easy to use and looks amazing.
+                    </p>
+                </div>
             </section>
         </main>
         <footer></footer>
