--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <header>
-            <h1>Shallwi</h1>
+            <div class="brand">
+                    <h1>Shallwi</h1>
+            </div>
             <nav>
                 <ul>
                     <li>Home</li>
