implement hero background image and buttons, adjust css

--- a/src/index.html
+++ b/src/index.html
@@ -22,16 +22,15 @@
                 <path d="M131.5 41C133.833 40.5 139.3 37.7 142.5 30.5V41H131.5Z" fill="white" />
             </svg>
         </div>
-        <div class="main-nav" style="display: inline-block">
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Services</li>
-                    <li>Partners</li>
-                    <li>Pricing</li>
-                    <li>Contact</li>
-                </ul>
-            </nav>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Services</li>
+                <li>Partners</li>
+                <li>Pricing</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
         </div>
     </header>
     <main>
@@ -42,6 +41,13 @@
                     Wow your customers with a fresh logo and a website makeover
                     that’s easy to use and looks amazing.
                 </p>
+                <div class="hero__actions">
+                    <button class="button--primary">Contact Us</button>
+                    <button>View Services</button>
+                </div>
+            </div>
+            <div class="hero__bg">
+                <img src="./img/undraw_webpages_illustration.svg" />
             </div>
         </section>
     </main>
