attempt svg logo fix

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
         <div class="brand">
             <a href="/">
                 <h1 style="display: none">Shallwi</h1>
-                <svg class="brand__logo" width="143" height="41" viewBox="0 0 143 41" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                <svg class="brand__logo" viewBox="0 0 143 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <!-- Vector Logo -->
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M0 41C3.83333 40.1667 11.5 36.6 11.5 29V20C11.3333 13.8333 15.9 1.2 31.5 0L123.236 0C129.236 -1.09666e-10 142.5 4.9 142.5 20.5C142.5 29 135.9 41 123.5 41L0 41ZM42.5 16.5C40.9 16.5 40.5 17.8333 40.5 18.5C40.5 19 40.9 20 42.5 20C44.1 20 44.5 19 44.5 18.5C44.5 17.8333 44.1 16.5 42.5 16.5ZM123.5 16.5C121.9 16.5 121.5 17.8333 121.5 18.5C121.5 19 121.9 20 123.5 20C125.1 20 125.5 19 125.5 18.5C125.5 17.8333 125.1 16.5 123.5 16.5ZM47 26.5C45.4 26.1 44.6667 27.3333 44.5 28C56.5 36.5 114 31 116.5 30.5C119 30 119.5 29.5 119.5 29C119.5 28.6 118.5 28.5 118 28.5C62.5 33.5 49 27 47 26.5Z"
