--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Shallwi – Love Your Brand | Graphic & Web Design</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 </head>
