implement pitch styling

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,23 @@
                 <img src="./img/undraw_webpages_illustration.svg" />
             </div>
         </section>
+        <section class="pitch">
+            <div class="pitch__content">
+                <h2>Partner with Shallwi</h2>
+                <div class="pitch__point">
+                <h3>Bring your vision to life.</h3>
+                <p>From the mind's eye to the real world, your idea will shine with the look and feel it deserves.</p>
+                </div>
+                <div class="pitch__point">
+                    <h3>Spare no detail.</h3>
+                    <p>Valuing your limited time, we sweat the small stuff so you can focus on the big picture.</p>
+                </div>
+                <div class="pitch__point">
+                    <h3>Grow with us.</h3>
+                    <p>Your success is our reason to celebrate, and with every challenge comes another opportunity to collaborate.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
