update pitch point grammar

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                 <h2>Partner with Shallwi</h2>
                 <div class="pitch__point">
                 <h3>Bring your vision to life.</h3>
-                <p>From the mind's eye to the real world, your idea will shine with the look and feel it deserves.</p>
+                <p>From the mind's eye to the real world, your ideas will shine with the look and feel they deserve.</p>
                 </div>
                 <div class="pitch__point">
                     <h3>Spare no detail.</h3>
