--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Shallwi – Love Your Brand | Graphic & Web Design</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Edmonton based graphic & web design team giving back to our community. Delight your customers with branding, marketing, and merchandise as awesome as you.">
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
@@ -26,11 +27,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/" class="current">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Partners</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Contact</a></li>
+                <!-- <li><a href="/" class="current">Home</a></li>
+                <li><a href="mailto:sup@shallwi.co">Contact</a></li> -->
+                <li>Shallwi</li>
             </ul>
         </nav>
         </div>
@@ -38,14 +37,14 @@
     <main>
         <section class="hero">
             <div class="hero__content">
-                <h2>Graphic & Web Design</h2>
+                <h2>Graphic &amp; Web Design</h2>
                 <p>
                     Wow your customers with a fresh logo and a website makeover
                     that’s easy to use and looks amazing.
                 </p>
                 <div class="hero__actions">
-                    <button class="button--primary">Contact Us</button>
-                    <button>View Services</button>
+                    <a href="https://www.instagram.com/supshallwi/"><button>See Our Work</button></a>
+                    <a href="mailto:sup@shallwi.co"><button class="button--primary">Contact Us</button></a>
                 </div>
             </div>
             <div class="hero__bg">
@@ -54,7 +53,7 @@
         </section>
         <section class="pitch">
             <div class="pitch__content">
-                <h2>Partner with Shallwi</h2>
+                <h2>Partner With Us</h2>
                 <div class="pitch__point">
                 <h3>Bring your vision to life.</h3>
                 <p>From the mind's eye to the real world, your ideas will shine with the look and feel they deserve.</p>
